<resources>
    <string name="app_name">Minhas Tarefas - Melhorada</string>
    <string name="lista_de_tarefas">Lista de Tarefas</string>
    <string name="adicionar">Adicionar</string>
    <string name="deletar">Deletar</string>
    <string name="limpar">Limpar</string>
    <string name="minhas_tarefas">Minhas tarefas</string>
    <string name="entrar">Entrar</string>
    <string name="e_mail">E-mail*</string>
    <string name="senha">Senha*</string>
    <string name="logado_sucesso">Logado com sucesso!</string>
    <string name="verifique_seu_email">Verifique seu e-mail!</string>
    <string name="email_enviado_com_sucesso">E-mail enviado com sucesso!</string>
    <string name="falha_logar">Falha ao logar!</string>
    <string name="preecha_todos_campos">Preencha todos os campos!</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="entrar_com_google">Entrar com Google</string>
    <string name="ou">ou</string>
    <string name="registrar">Registrar</string>
    <string name="registrar_com_google">Registrar com Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tarefa_titulo">Título</string>
    <string name="tarefa_descricao">Descrição</string>
    <string name="btn_sel_data">Data</string>
    <string name="btn_sel_hora">Hora</string>
    <string name="salva_tarefa">Salvar</string>
    <string name="deletar_tarefa">Deletar tarefa?</string>
    <string name="deseja_deletar_tarefa">Deseja deletar a tarefa?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="tarefa_deletada">Tarefa deletada com sucesso!</string>
    <string name="erro_carregar_tarefa">Erro ao carregar a tarefa!</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="password">Senha</string>
    <string name="sem_senha">Digite sua senha</string>
    <string name="senha_fraca">Fraca</string>
    <string name="senha_media">Média</string>
    <string name="senha_forte">Forte</string>
    <string name="senha_diferentes">As senhas não coincidem!</string>
    <string name="tamanho_senha_inadequado">Favor informar senha com no mínimo 8 caracteres</string>
    <string name="usuario_criado_sucesso">Usuário criado com sucesso. Verifique sua caixa de e-mail!</string>
    <string name="email_cadastrado">Email já cadastrado!</string>
    <string name="erro_criar_usuario">Erro ao criar usuário!</string>
    <string name="vencimento_tarefa">Sua tarefa mais nova vence agora!</string>
    <string name="vencimento_tarefa_agora">Fique atento pois sua próxima tarefa vencerá agora!</string>
    <string name="notificacao">Notificação</string>
    <string name="title_activity_main_binding">ActivityMainBinding</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tarefa_atualizada_sucesso">Tarefa atualizada com sucesso!</string>
    <string name="erro_atualizar_tarefa">Erro ao atualizar tarefa!</string>
    <string name="tarefa_criada_sucesso">Tarefa criada com sucesso!</string>
    <string name="notificao_agendada">Notificação agendada!</string>
    <string name="notificao_recebida">Notificação recebida!</string>
    <string name="sobrenome">sobrenome</string>
    <string name="nome">Nome</string>
    <string name="atualizar_perfil">Atualizar Perfil</string>
    <string name="btn_alterar_senha">Alterar senha</string>
    <string name="imagem_falha_salvar">Falha ao salvar imagem!</string>
    <string name="perfil_atualizado_sucesso">Perfil atualizado com sucesso!</string>
    <string name="perfil_falha_atualizar">Falha ao atualizar perfil!</string>
    <string name="permissao_negada">Permissão de galeria negada!</string>
    <string name="permissao_concedida">Permissão de galeria concedida!</string>
    <string name="senha_alterada">Senha alterada com sucesso!</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="nome_notificacao">Family Silva</string>
    <string name="notificacao_nome">Notificação Family Silva</string>
    <string name="notificacao_canal">Canal de notificações para Family Silva</string>
    <string name="titulo_notificacao">Título da notificação</string>
    <string name="mensagem_notificacao">Mensagem da notificação</string>
</resources>
