<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:chainUseRtl="true"
    tools:ignore="Autofill"
    android:padding="20dp"
    tools:context=".Login_Screen">

    <TextView
        android:id="@+id/textEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textAlignment="center"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/textEsqueciSenha"
        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"/>

    <TextView
        android:id="@+id/textEsqueciSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_minha_senha"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnEntrarComGoogle"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/entrar"
        app:layout_constraintBottom_toTopOf="@id/textViewOu1"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"/>

    <TextView
        android:id="@+id/textViewOu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ou"
        android:textAlignment="center"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnregistrarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <Button
        android:id="@+id/btnregistrarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registrar"
        android:backgroundTint="@color/material_on_background_emphasis_high_type"
        app:layout_constraintBottom_toTopOf="@id/textViewOu2"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewOu1"/>

    <TextView
        android:id="@+id/textViewOu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ou"
        android:textAlignment="center"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnEntrarComGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregistrarView" />

    <Button
        android:id="@+id/btnEntrarComGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/entrar_com_google"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnregistrarView"
        app:layout_constraintStart_toStartOf="@+id/btnregistrarView"
        app:layout_constraintTop_toBottomOf="@+id/textViewOu2"/>

</androidx.constraintlayout.widget.ConstraintLayout>