<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:chainUseRtl="true"
    tools:ignore="Autofill"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toTopOf="@id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <fragment
        android:id="@+id/editPassword"
        android:name="com.example.minhas_tarefas_melhorada.fragments.FragmentSenhaDificuldade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/editConfirmaPassword"
        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editConfirmaPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/confirmar_senha"
        android:inputType="textPassword"
        android:padding="10dp"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toTopOf="@id/btnCriarConta"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnCriarConta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registrar"
        app:layout_constraintBottom_toTopOf="@id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/editConfirmaPassword"
        app:layout_constraintStart_toStartOf="@+id/editConfirmaPassword"
        app:layout_constraintTop_toBottomOf="@+id/editConfirmaPassword"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ou"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/loginView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCriarConta" />

    <Button
        android:id="@+id/loginView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/entrar"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ou"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginView" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registrar_com_google"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginView"
        app:layout_constraintStart_toStartOf="@+id/loginView"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>

</androidx.constraintlayout.widget.ConstraintLayout>