<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Home">
            <ImageView
                android:id="@+id/imgLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/outline_logout_24"
                android:layout_gravity="right"
                android:layout_marginEnd="16dp"/>
            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:src="@drawable/outline_account_circle_24"
                android:layout_gravity="right"
                android:layout_marginEnd="16dp"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">
        <TextView
            android:id="@+id/textListaTarefas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_de_tarefas"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="25dp"/>
        <EditText
            android:id="@+id/edtCreateTask"
            android:layout_below="@id/textListaTarefas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adicionar"
            android:textColorHint="@color/black"
            android:padding="15dp"/>
        <LinearLayout
            android:id="@+id/linearBotoesAcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/edtCreateTask"
            android:padding="10dp">
            <Button
                android:id="@+id/btnAdicionar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adicionar"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnDeletar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deletar"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limpar"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textMinhasTarefas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearBotoesAcoes"
            android:text="@string/minhas_tarefas"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:gravity="center"/>

        <ListView
            android:id="@+id/listViewTasks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/textMinhasTarefas"
            android:choiceMode="multipleChoice"/>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/outline_add_box_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>