<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:padding="10dp"
    tools:context=".TaskActivity">

    <LinearLayout
        android:id="@+id/textAreaTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearAreaData"
        android:orientation="vertical">
        <EditText
            android:id="@+id/editTituloTarefa"
            android:layout_width="match_parent"
            android:backgroundTint="@color/purple_500"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/tarefa_titulo"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editDescricaoTarefa"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <EditText
            android:id="@+id/editDescricaoTarefa"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:backgroundTint="@color/purple_500"
            android:hint="@string/tarefa_descricao"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="top"
            android:lines="4"
            app:layout_constraintEnd_toEndOf="@id/editTituloTarefa"
            app:layout_constraintStart_toStartOf="@id/editTituloTarefa"
            app:layout_constraintTop_toTopOf="@id/editTituloTarefa"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAreaData"
        app:layout_constraintEnd_toEndOf="@+id/textAreaTarefa"
        app:layout_constraintStart_toStartOf="@+id/textAreaTarefa"
        app:layout_constraintTop_toBottomOf="@+id/textAreaTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:gravity="center">
        <EditText
            android:id="@+id/editData"
            android:backgroundTint="@color/purple_500"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:enabled="false"
            />
        <Button
            android:id="@+id/btndata"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/btn_sel_data"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAreaHora"
        app:layout_constraintEnd_toEndOf="@+id/linearAreaData"
        app:layout_constraintStart_toStartOf="@+id/linearAreaData"
        app:layout_constraintTop_toBottomOf="@+id/linearAreaData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:gravity="center">
        <EditText
            android:id="@+id/editHora"
            android:backgroundTint="@color/purple_500"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:enabled="false"/>
        <Button
            android:id="@+id/btnhora"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/btn_sel_hora"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnSalvarTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salva_tarefa"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/linearAreaHora"
        app:layout_constraintStart_toStartOf="@+id/linearAreaHora"
        app:layout_constraintTop_toBottomOf="@+id/linearAreaHora"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
